# PTZ_canonVB_M42

./: Calib_chess.cpp  README.md  asserv.cpp  canon_cmd.cpp  canon_cmd.h  envoi_cmd.cpp  pid.cpp  qrcode_scan.cpp
ros_pkg/: CMakeLists.txt  README.md  package.xml
ros_pkg/cfg/: CanonParams.cfg
ros_pkg/include/libCanon/: CanonDriver.h  homog.cpp
ros_pkg/src/: capteurs.cpp
ros_pkg/src/libCanon/: CanonDriver.cpp
ros_pkg/src/node/: cmd.cpp  my_subscriber.cpp  node.cpp  pointage.txt
sample_without_ros/: Calib_chess.cpp  README.md  canon_cmd.h  pid.cpp  qrcode_scan.cpp
